--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<groupId>com.mt</groupId>
-	<artifactId>maven-web-application</artifactId>
+	<artifactId>gen-test</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	
-	<name>maven-web-application</name>
+	<name>gen-test</name>
 
 	<description>Maven Web Project for Java Project</description>
 
@@ -97,13 +97,13 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Releases Nexus Repository</name>
+	      <name>Gentest Releases Nexus Repository</name>
 	      <url>http://44.204.84.214:8081/gaby/repository/gaby-frontend-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Snapshot Nexus Repository </name>
+	      <name>Gentest Snapshot Nexus Repository</name>
 	      <url>http://44.204.84.214:8081/gaby/repository/gaby-frontend-snaoshot/</url>
 	    </snapshotRepository>
 	    
